# qoipp

./: CMakeLists.txt  README.md  conanfile.py
include/: qoipp.hpp
include/qoipp/: qoipp.ipp  utility.hpp
tests/: qoi.h  qoi_debugging.h  test1.cpp  test2.cpp
